Bug 108482 - Repeat of 2 heading rows do not work in case of vertical text orientation in 2nd row
Summary: Repeat of 2 heading rows do not work in case of vertical text orientation in ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.2 rc
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.1.0 target:6.0.4
Keywords: bibisected, bisected, regression
: 116319 (view as bug list)
Depends on:
Blocks: Vertical-Text
  Show dependency treegraph
 
Reported: 2017-06-12 14:10 UTC by andis.lazdins
Modified: 2018-03-28 15:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example of not appearing 2nd header row in case of vertical text orientation (10.98 KB, application/vnd.oasis.opendocument.text)
2017-06-12 14:11 UTC, andis.lazdins
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andis.lazdins 2017-06-12 14:10:33 UTC
Description:
In tables with 2 heading rows function Repeat heading rows do not work if text orientation in 2nd row is vertical and works, if it is set to horizontal.

Steps to Reproduce:
1.Open attached file.
2.Check if Repeat heading is activated under 'Table' 'Properties...' 'Text Flow' and The first 2 rows are set.
3.Close the dialogue and scroll to second page.

Actual Results:  
Only the first row is appearing as a heading.

Expected Results:
First and second rows are appearing as headings


Reproducible: Always

User Profile Reset: It is done with fresh profile

Additional Info:
Changing text orientation for vertical cells back to horizontal through 'Table' 'Properties...' 'Text Flow' 'Text orientation' returns behavior to normal and 2 rows are appearing as headers.


User-Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:53.0) Gecko/20100101 Firefox/53.0
Comment 1 andis.lazdins 2017-06-12 14:11:39 UTC
Created attachment 133974 [details]
Example of not appearing 2nd header row in case of vertical text orientation
Comment 2 Xisco Faulí 2017-06-15 11:50:03 UTC
Regression introduced by:

author	Mike Kaganski <mike.kaganski@collabora.com>	2016-12-08 20:01:03 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2016-12-12 08:23:30 (GMT)
commit 6f5024de2e1a5cc533527e45b33d9a415467c48d (patch)
tree de8f7248a9f0361e23dcbb1eacb72f67071d51a9
parent 7740e945e0c74d057c424cced079adc766cc5604 (diff)
tdf#104425 sw: split rows w/large min height (fix layout loop)

Bisected with bibisect-linux-64-5.4

Adding Cc: to Mike Kaganski
Comment 3 andis.lazdins 2017-07-17 08:32:21 UTC
The problem still persist in 5.3.5.1 64 bit Ubuntu Linux
Comment 4 andis.lazdins 2017-08-03 04:41:45 UTC
This is still an issue in 5.3.4.2 in Linux Ubuntu 64 bit
Comment 5 raal 2018-03-09 16:11:21 UTC
*** Bug 116319 has been marked as a duplicate of this bug. ***
Comment 6 Jeroen Hoek 2018-03-09 16:59:36 UTC
Bug 116319 has another reproduction document attached, as well as two PDF exports showing the rendering of that document in an earlier version of LibreOffice that works, and a later one that doesn't — in case it helps test this issue.

Shouldn't this bug be CONFIRMED instead of NEW?
Comment 7 Mike Kaganski 2018-03-11 08:59:49 UTC
https://gerrit.libreoffice.org/51073
Comment 8 Commit Notification 2018-03-11 10:51:51 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=82d9af7f14c808d48fa5db9420c85a8d26c79905

tdf#108482: ignore repeated headlines' previous instances height

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Jeroen Hoek 2018-03-13 15:47:38 UTC
Looks good Mike. The March 13th master build seems to handle this case correctly now for me.
Comment 10 Commit Notification 2018-03-20 08:57:25 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8ee612c29e0bfb2a9176a2d154217d4b4558a6cf&h=libreoffice-6-0

tdf#108482: ignore repeated headlines' previous instances height

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2018-03-28 15:23:55 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 8329f4541e27402d19729ae1588af8bfe61f7b49
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Thank you Mike Kaganski!