tdf#108482: ignore repeated headlines' previous instances height

Change-Id: Idae0b99c4171556612fb41bb02f1c48bbfeec4b2
Reviewed-on: https://gerrit.libreoffice.org/51073
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 82d9af7f14c808d48fa5db9420c85a8d26c79905)