sw/source/core/layout/tabfrm.cxx
@@ -4003,6 +4003,9 @@ static sal_uInt16 lcl_GetBottomLineDist( const SwRowFrame& rRow )
 // on each following page
 static SwTwips lcl_calcHeightOfRowBeforeThisFrame(const SwRowFrame& rRow)
 {
+    // We don't need to account for previous instances of repeated headlines
+    if (rRow.IsRepeatedHeadline())
+        return 0;
     SwRectFnSet aRectFnSet(&rRow);
     const SwTableLine* pLine = rRow.GetTabLine();
     const SwTabFrame* pTab = rRow.FindTabFrame();
